# ReidCLI

./: .gitignore  .npmignore  .npmrc  README.md  package.json  pyproject.toml  settings.example.json  settings.json
docs/: reidx-architecture-audit.md  reidx-goal-command-build-plan.md  reidx-phase-5-plan.md
scripts/: find-python.js  postinstall.js
src/reidcli/: __init__.py
src/reidcli/app/: commands.py
src/reidcli/config/: models.py
src/reidcli/provider/: openai.py  registry.py
src/reidcli/tools/: __init__.py  web_tools.py
src/reidcli/ui/: app.py  commands.py  render.py  repl.py
src/reidx/: __init__.py  __main__.py
src/reidx/app/: __init__.py  commands.py
src/reidx/automation/: __init__.py  exec.py
src/reidx/config/: __init__.py  loader.py  models.py  settings.py  storage.py
src/reidx/deepreid/: __init__.py  pipeline.py
src/reidx/diagnostics/: logger.py
src/reidx/goals/: __init__.py  models.py  store.py
src/reidx/integrations/: __init__.py  mcp.py
src/reidx/nyx/: __init__.py  persona.py
src/reidx/policy/: __init__.py  engine.py  models.py
src/reidx/provider/: __init__.py  _http.py  anthropic.py  base.py  context_windows.py  models.py  oauth.py  ollama.py  (+5 more)
tests/: test_agent.py  test_compact.py  test_context_windows.py  test_deepreid.py  test_effort_auto.py  test_goals.py  test_http_retry.py  test_model_id_handling.py  test_model_palette.py  test_network_errors.py  test_ollie_qwen.py  test_policy.py  test_providers_subagents.py  test_reasoning.py  test_routing_cost.py  test_session.py  test_settings_seed.py  test_stream.py  test_tools.py
(+39 files in other folders)
