[project]
name = "reidx"
version = "2.0.4"
description = "Terminal-native personal intelligence and coding CLI (agent-first runtime)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Reid" }]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[project.scripts]
reid = "reidx.app.commands:app"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reidx"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
